Fix follow button alignment.

--- a/github.css
+++ b/github.css
@@ -1,6 +1,9 @@
 a.cci{
-	margin: -3px 8px 0 0;
+	margin-left: 0;
 }
+	a.cci.status-dot{
+		margin: -3px 8px 0 0;
+	}
 	a.cci span.default-build-status{
 		display: inline-block;
 		border-radius: 50%;
